# aoc2020

./: .gitignore  Ballerina.toml  README.md  mypy.ini  pyproject.toml  tox.ini
src/aoc2020/: main.py
src/aoc2020/commands/: command_template.py  password_philosophy.py  report_repair.py
tests/aoc2020/commands/: test_password_philosophy.py  test_report_repair.py
