[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["Jon Bringhurst <jon@bringhurst.org>"]
packages = [
    { include = "aoc2020", from = "src" },
]

[tool.poetry.scripts]
aoc2020 = "aoc2020.main:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
isort = "^5.6.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
pytest-cov = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
